Apply translation memory

--- a/l10n/po/ja_JP/README.md.po
+++ b/l10n/po/ja_JP/README.md.po
@@ -216,7 +216,7 @@ msgstr ""
 #: upstream/README.md:73
 #, no-wrap
 msgid "License"
-msgstr ""
+msgstr "ライセンス"
 
 #. type: Plain text
 #: upstream/README.md:75
