--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-all-build-items.adoc.po
@@ -3981,7 +3981,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-all-build-items.adoc:1352
 #, no-wrap
 msgid "Swagger UI"
-msgstr ""
+msgstr "Swagger UI"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-all-build-items.adoc:1357
