--- a/l10n/po/ja_JP/_generated-config/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-all-build-items.adoc.po
@@ -4017,7 +4017,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-all-build-items.adoc:1363
 #, no-wrap
 msgid "Swagger UI"
-msgstr ""
+msgstr "Swagger UI"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-all-build-items.adoc:1368
