--- a/l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po
@@ -84,7 +84,7 @@ msgstr ""
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:29
 #, no-wrap
 msgid "Requirements"
-msgstr ""
+msgstr "要件"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:32
