--- a/l10n/po/ja_JP/_versions/1.11/guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/cassandra.adoc.po
@@ -85,7 +85,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cassandra.adoc:34
 msgid "All the information between the browser and the server is formatted as JSON."
-msgstr ""
+msgstr "ブラウザとサーバー間の情報はすべてJSON形式になっています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cassandra.adoc:36
@@ -953,7 +953,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/cassandra.adoc:546
 #, no-wrap
 msgid "Connection Health Check"
-msgstr ""
+msgstr "接続のヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cassandra.adoc:550
@@ -963,7 +963,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cassandra.adoc:553
 msgid "So when you access the `/q/health/ready` endpoint of your application you will have information about the connection validation status."
-msgstr ""
+msgstr "そのため、アプリケーションの `/q/health/ready` エンドポイントにアクセスすると、接続の検証状況に関する情報が表示されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cassandra.adoc:556
