--- a/l10n/po/ja_JP/_versions/1.11/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/elasticsearch.adoc.po
@@ -90,7 +90,7 @@ msgstr "このガイドで開発するアプリケーションは非常にシン
 #. type: Plain text
 #: upstream/_versions/1.11/guides/elasticsearch.adoc:34
 msgid "All the information between the browser and the server is formatted as JSON."
-msgstr ""
+msgstr "ブラウザとサーバー間の情報はすべてJSON形式になっています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/elasticsearch.adoc:36
