--- a/l10n/po/ja_JP/_versions/1.11/guides/ide-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/ide-tooling.adoc.po
@@ -34,7 +34,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:14
 msgid "The following IDEs have support for the community developed Quarkus Tools:"
-msgstr ""
+msgstr "以下のIDEは、コミュニティで開発されたQuarkus Toolsをサポートしています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:16
@@ -59,7 +59,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:21
 msgid "In addition IntelliJ has additional support for Quarkus in their Ultimate non-open source version."
-msgstr ""
+msgstr "さらにIntelliJは、非オープンソースのUltimate版でQuarkusを追加サポートしています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:23
@@ -68,8 +68,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:25
+#, fuzzy
 msgid "The table below gives an overview of the current IDE's with links and a high-level overview of their features."
-msgstr ""
+msgstr "下の表では、現在のIDEの概要とリンク、その機能のハイレベルな概要をご紹介しています。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:33
@@ -132,19 +133,19 @@ msgstr "説明"
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:51
 #, no-wrap
 msgid "Visual Studio Code extension to install using the marketplace"
-msgstr ""
+msgstr "マーケットプレイスを使用してインストールするVisual Studioのコードエクステンション"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:52
 #, no-wrap
 msgid "Eclipse plugin to install into Eclipse using an updatesite"
-msgstr ""
+msgstr "アップデートサイトを使ってEclipseにインストールするEclipseプラグイン"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:53
 #, no-wrap
 msgid "IntelliJ plugin that works in IntelliJ Community and Ultimate. Available from Marketplace."
-msgstr ""
+msgstr "IntelliJ CommunityとUltimateで動作するIntelliJプラグイン。マーケットプレイスから入手可能"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:54
@@ -156,13 +157,13 @@ msgstr ""
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:56
 #, no-wrap
 msgid "Built-in Quarkus features available in Eclipse Che incl. che.openshift.io."
-msgstr ""
+msgstr "Eclipse Cheで利用可能なQuarkusの組込機能にはche.openshift.ioなどがあります。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:57
 #, no-wrap
 msgid "Status"
-msgstr ""
+msgstr "ステータス"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:58
@@ -172,13 +173,13 @@ msgstr ""
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:63
 #, no-wrap
 msgid "Stable"
-msgstr ""
+msgstr "Stable"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:64
 #, no-wrap
 msgid "Downloads"
-msgstr ""
+msgstr "ダウンロード"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:67
@@ -188,12 +189,15 @@ msgid ""
 "{empty} +\n"
 " https://download.jboss.org/jbosstools/vscode/snapshots/vscode-quarkus/?C=M;O=D[Development Builds]"
 msgstr ""
+"https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus[Marketplace]\n"
+"{empty} +\n"
+" https://download.jboss.org/jbosstools/vscode/snapshots/vscode-quarkus/?C=M;O=D[Development Builds]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:68
 #, no-wrap
 msgid "https://download.jboss.org/jbosstools/photon/snapshots/builds/jbosstools-quarkus_master/[Development Update Site]"
-msgstr ""
+msgstr "https://download.jboss.org/jbosstools/photon/snapshots/builds/jbosstools-quarkus_master/[Development Update Site]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:71
@@ -203,24 +207,27 @@ msgid ""
 "{empty} +\n"
 "https://download.jboss.org/jbosstools/intellij/snapshots/intellij-quarkus/[Development Builds]"
 msgstr ""
+"https://plugins.jetbrains.com/plugin/13234-quarkus/versions[Marketplace]\n"
+"{empty} +\n"
+"https://download.jboss.org/jbosstools/intellij/snapshots/intellij-quarkus/[Development Builds]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:72
 #, no-wrap
 msgid "https://www.jetbrains.com/idea/nextversion/[Installer]"
-msgstr ""
+msgstr "https://www.jetbrains.com/idea/nextversion/[Installer]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:74
 #, no-wrap
 msgid "https://che.openshift.io/f?url=https://raw.githubusercontent.com/redhat-developer/devfile/master/getting-started/quarkus/devfile.yaml[Start Che Workspace]"
-msgstr ""
+msgstr "https://che.openshift.io/f?url=https://raw.githubusercontent.com/redhat-developer/devfile/master/getting-started/quarkus/devfile.yaml[Start Che Workspace]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:75
 #, no-wrap
 msgid "Source"
-msgstr ""
+msgstr "ソース"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:76
@@ -244,13 +251,13 @@ msgstr ""
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:79
 #, no-wrap
 msgid "Closed-Source"
-msgstr ""
+msgstr "クローズドソース"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:82
 #, no-wrap
 msgid "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
-msgstr ""
+msgstr "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:83
@@ -301,7 +308,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:163
 #, no-wrap
 msgid "icon:check[]"
-msgstr ""
+msgstr "icon:check[]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:86
@@ -318,49 +325,49 @@ msgstr ""
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:164
 #, no-wrap
 msgid "icon:times[]"
-msgstr ""
+msgstr "icon:times[]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:89
 #, no-wrap
 msgid "Wizards w/code.quarkus.io"
-msgstr ""
+msgstr "code.quarkus.ioのウィザード"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:92
 #, no-wrap
 msgid "https://issues.jboss.org/browse/JBIDE-26950[icon:times[]]"
-msgstr ""
+msgstr "https://issues.jboss.org/browse/JBIDE-26950[icon:times[]]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:96
 #, no-wrap
 msgid "Custom Wizard"
-msgstr ""
+msgstr "カスタムウィザード"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:103
 #, no-wrap
 msgid "Config editor"
-msgstr ""
+msgstr "設定エディタ"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:110
 #, no-wrap
 msgid "Config autocompletion"
-msgstr ""
+msgstr "設定の自動補完"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:117
 #, no-wrap
 msgid "Config validation"
-msgstr ""
+msgstr "設定の検証"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:124
 #, no-wrap
 msgid "Config jump to definition"
-msgstr ""
+msgstr "設定の定義へのジャンプ"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:128
@@ -372,19 +379,19 @@ msgstr ""
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:131
 #, no-wrap
 msgid "Config profiles"
-msgstr ""
+msgstr "設定プロファイル"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:138
 #, no-wrap
 msgid "Config outline"
-msgstr ""
+msgstr "設定アウトライン"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:145
 #, no-wrap
 msgid "Easy Launch debug/dev:mode"
-msgstr ""
+msgstr "debug/dev:mode の簡単起動"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:152
@@ -396,4 +403,4 @@ msgstr ""
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:159
 #, no-wrap
 msgid "Injection Discovery/Navigation"
-msgstr ""
+msgstr "インジェクションディスカバリー/ナビゲーション"
