--- a/l10n/po/ja_JP/_versions/1.11/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/openapi-swaggerui.adoc.po
@@ -376,7 +376,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:197
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:480
 msgid "Now, we are ready to run our application:"
-msgstr ""
+msgstr "これで、アプリケーションを実行する準備が整いました。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:201
@@ -388,7 +388,7 @@ msgstr "./mvnw compile quarkus:dev\n"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:204
 msgid "Once your application is started, you can make a request to the default `/q/openapi` endpoint:"
-msgstr ""
+msgstr "アプリケーションを起動すると、デフォルトの `/q/openapi` エンドポイントにリクエストを行うことができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:250
@@ -480,17 +480,17 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:270
 msgid "Version"
-msgstr ""
+msgstr "バージョン"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:271
 msgid "Contact Information"
-msgstr ""
+msgstr "連絡先情報"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:272
 msgid "License"
-msgstr ""
+msgstr "ライセンス"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:277
@@ -657,32 +657,32 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:395
 msgid "`META-INF/openapi.yaml`"
-msgstr ""
+msgstr "`META-INF/openapi.yaml`"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:396
 msgid "`META-INF/openapi.yml`"
-msgstr ""
+msgstr "`META-INF/openapi.yml`"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:397
 msgid "`META-INF/openapi.json`"
-msgstr ""
+msgstr "`META-INF/openapi.json`"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:398
 msgid "`WEB-INF/classes/META-INF/openapi.yml`"
-msgstr ""
+msgstr "`WEB-INF/classes/META-INF/openapi.yml`"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:399
 msgid "`WEB-INF/classes/META-INF/openapi.yaml`"
-msgstr ""
+msgstr "`WEB-INF/classes/META-INF/openapi.yaml`"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:400
 msgid "`WEB-INF/classes/META-INF/openapi.json`"
-msgstr ""
+msgstr "`WEB-INF/classes/META-INF/openapi.json`"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:402
@@ -743,7 +743,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:430
 #, no-wrap
 msgid "Property value"
-msgstr ""
+msgstr "プロパティ値"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:432
@@ -761,7 +761,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:435
 #, no-wrap
 msgid "Use the method name."
-msgstr ""
+msgstr "メソッド名を使用します。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:436
@@ -773,7 +773,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:438
 #, no-wrap
 msgid "Use the class name (without the package) plus the method."
-msgstr ""
+msgstr "(パッケージを含まない)クラス名とメソッドを使用します。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:439
@@ -785,7 +785,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:440
 #, no-wrap
 msgid "Use the class name plus the method name."
-msgstr ""
+msgstr "クラス名とメソッド名を使用します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:442
@@ -881,10 +881,10 @@ msgstr "設定リファレンス"
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:505
 #, no-wrap
 msgid "OpenAPI"
-msgstr ""
+msgstr "OpenAPI"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:509
 #, no-wrap
 msgid "Swagger UI"
-msgstr ""
+msgstr "Swagger UI"
