--- a/l10n/po/ja_JP/_versions/1.11/guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/redis.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:11
 msgid "This guide demonstrates how your Quarkus application can connect to a Redis server using the Redis Client extension."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがRedisクライアントエクステンションを使用してRedisサーバーに接続する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/redis.adoc:14
@@ -64,7 +64,7 @@ msgstr "Apache Maven 3.5.3+"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:23
 msgid "A running Redis server, or Docker Compose to start one"
-msgstr ""
+msgstr "実行中のRedisサーバー、または1つ起動するためのDocker Compose"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:24
@@ -80,12 +80,12 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:29
 msgid "In this guide, we are going to expose a simple Rest API to increment numbers by using the https://redis.io/commands/incrby[`INCRBY`] command.  Along the way, we'll see how to use other Redis commands like `GET`, `SET`, `DEL` and `KEYS`."
-msgstr ""
+msgstr "このガイドでは、 link:https://redis.io/commands/incrby[`INCRBY`] コマンドを使用して、数値をインクリメントするシンプルな Rest API を公開します。また、 `GET` 、 `SET` 、 `DEL` 、 、 `KEYS` のような他の Redis コマンドの使い方も見ていきましょう。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:32
 msgid "We'll be using the Quarkus Redis Client extension to connect to our Redis Server. The extension is implemented on top of the https://vertx.io/docs/vertx-redis-client/java/[Vert.x Redis Client], providing an asynchronous and non-blocking way to connect to Redis."
-msgstr ""
+msgstr "今回は、Quarkus Redis Clientエクステンションを使用して、Redisサーバーに接続します。このエクステンションは link:https://vertx.io/docs/vertx-redis-client/java/[Vert.x Redis Client] の上に実装されており、非同期かつノンブロッキングでRedisに接続する方法を提供します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/redis.adoc:33
@@ -105,7 +105,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:41
 msgid "The solution is located in the `redis-quickstart` {quickstarts-tree-url}/redis-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `redis-quickstart` {quickstarts-tree-url}/redis-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/redis.adoc:42
@@ -133,12 +133,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:57
 msgid "This command generates a Maven project, importing the Redis extension."
-msgstr ""
+msgstr "このコマンドは、RedisエクステンションをインポートしてMavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:61
 msgid "If you already have your Quarkus project configured, you can add the `redis-client` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `redis-client` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:65
@@ -170,7 +170,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:81
 msgid "Then, we need to start a Redis instance (if you do not have one already) using the following command:"
-msgstr ""
+msgstr "次に、以下のコマンドを使用してRedisインスタンスを起動する必要があります(すでにインスタンスを持っていない場合)。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:85
@@ -187,7 +187,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:91
 msgid "Once we have the Redis server running, we need to configure the Redis connection properties.  This is done in the `application.properties` configuration file. Edit it to the following content:"
-msgstr ""
+msgstr "Redis サーバーを起動したら、Redis 接続のプロパティーを設定する必要があります。これは `application.properties` の設定ファイルで行います。以下の内容に編集してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:95
@@ -198,18 +198,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:98
 msgid "Configure Redis hosts to connect to. Here we connect to the Redis server we started in the previous section"
-msgstr ""
+msgstr "接続先のRedisホストを設定します。ここでは、前のセクションで開始したRedisサーバーに接続します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/redis.adoc:99
 #, no-wrap
 msgid "Creating the Increment POJO"
-msgstr ""
+msgstr "インクリメントPOJOの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:103
 msgid "We are going to model our increments using the `Increment` POJO.  Create the `src/main/java/org/acme/redis/Increment.java` file, with the following content:"
-msgstr ""
+msgstr "`Increment` POJO を使用してインクリメントをモデル化します。 `src/main/java/org/acme/redis/Increment.java` ファイルを作成し、以下の内容で作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:107
@@ -399,12 +399,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/redis.adoc:192
 #, no-wrap
 msgid "Creating the Increment Resource"
-msgstr ""
+msgstr "インクリメントリソースの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:195
 msgid "Create the `src/main/java/org/acme/redis/IncrementResource.java` file, with the following content:"
-msgstr ""
+msgstr "以下の内容の `src/main/java/org/acme/redis/IncrementResource.java` ファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:208
@@ -501,12 +501,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/redis.adoc:248
 #, no-wrap
 msgid "Modifying the test class"
-msgstr ""
+msgstr "テストクラスの変更"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:251
 msgid "Edit the `src/test/java/org/acme/redis/IncrementResourceTest.java` file to the following content:"
-msgstr ""
+msgstr "`src/test/java/org/acme/redis/IncrementResourceTest.java` ファイルを以下の内容に編集してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:257
@@ -733,7 +733,7 @@ msgstr "実行"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:392
 msgid "If you followed the instructions, you should have the Redis server running.  Then, you just need to run the application using:"
-msgstr ""
+msgstr "指示に従えば、Redisサーバーが起動しているはずです。あとは、アプリケーションを使って実行するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:396
@@ -744,13 +744,13 @@ msgstr "./mvnw quarkus:dev\n"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:399
 msgid "Open another terminal and run the `curl http://localhost:8080/increments` command."
-msgstr ""
+msgstr "別のターミナルを開いて `curl http://localhost:8080/increments` コマンドを実行します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/redis.adoc:400
 #, no-wrap
 msgid "Interacting with the application"
-msgstr ""
+msgstr "アプリケーションとの相互作用"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:405
@@ -761,7 +761,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/redis.adoc:406
 #, no-wrap
 msgid "Creating a new increment"
-msgstr ""
+msgstr "新しいインクリメントの作成"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:411
@@ -777,7 +777,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:416
 msgid "Running the above command should return the result below:"
-msgstr ""
+msgstr "上記のコマンドを実行すると、以下のような結果が返ってくるはずです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:423
@@ -794,12 +794,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/redis.adoc:425
 #, no-wrap
 msgid "See current increments keys"
-msgstr ""
+msgstr "現在のインクリメントキーの確認"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:428
 msgid "To see the list of current increments keys, run the following command:"
-msgstr ""
+msgstr "現在のインクリメントキーのリストを表示するには、以下のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:432
@@ -810,18 +810,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:435
 msgid "The above command should return `[\"first\"]` indicating that we have only one increment thus far."
-msgstr ""
+msgstr "上記のコマンドは `[\"first\"]` を返し、これまでのところインクリメントが 1 つしかないことを示しているはずです。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/redis.adoc:436
 #, no-wrap
 msgid "Retrieve a new increment"
-msgstr ""
+msgstr "新しいインクリメントの取得"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:439
 msgid "To retrieve an increment using its key, we will have to run the below command:"
-msgstr ""
+msgstr "キーを使ってインクリメントを取得するには、以下のコマンドを実行する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:443
@@ -832,7 +832,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:446
 msgid "Running this command, should return the following result:"
-msgstr ""
+msgstr "このコマンドを実行すると、以下のような結果が返ってくるはずです。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/redis.adoc:455
@@ -843,7 +843,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:458
 msgid "To increment a value, run the following command:"
-msgstr ""
+msgstr "値をインクリメントするには、以下のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:462
@@ -854,12 +854,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:465
 msgid "Increment the `first` value by 27."
-msgstr ""
+msgstr "`first` の値を 27 増やします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:467
 msgid "Now, running the command `curl http://localhost:8080/increments/first` should return the following result:"
-msgstr ""
+msgstr "さて、コマンドを実行すると `curl http://localhost:8080/increments/first` は次のような結果を返します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:474
@@ -880,12 +880,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/redis.adoc:478
 #, no-wrap
 msgid "Deleting a key"
-msgstr ""
+msgstr "キーの削除"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:481
 msgid "Use the command below, to delete an increment given its key."
-msgstr ""
+msgstr "インクリメントのキーを指定して削除するには、以下のコマンドを使用します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:485
@@ -896,7 +896,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:488
 msgid "Delete the `first` increment."
-msgstr ""
+msgstr "`first` のインクリメントを削除します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:490
@@ -917,7 +917,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:496
 msgid "First, we will need to package it:"
-msgstr ""
+msgstr "まず、パッケージ化します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:500
@@ -933,7 +933,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:505
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:509
@@ -966,7 +966,7 @@ msgstr "./mvnw package -Pnative\n"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:528
 msgid "Once the build is finished, you can run the executable with:"
-msgstr ""
+msgstr "ビルドが完了したら、実行ファイルを次のように実行することが出来ます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:532
@@ -978,22 +978,22 @@ msgstr ""
 #: upstream/_versions/1.11/guides/redis.adoc:534
 #, no-wrap
 msgid "Connection Health Check"
-msgstr ""
+msgstr "接続のヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:538
 msgid "If you are using the `quarkus-smallrye-health` extension, `quarkus-vertx-redis` will automatically add a readiness health check to validate the connection to the Redis server."
-msgstr ""
+msgstr "`quarkus-smallrye-health` エクステンションを使用している場合、 `quarkus-vertx-redis` は、Redis サーバーへの接続を検証するためのreadiness ヘルスチェックを自動的に追加します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:540
 msgid "So when you access the `/q/health/ready` endpoint of your application you will have information about the connection validation status."
-msgstr ""
+msgstr "そのため、アプリケーションの `/q/health/ready` エンドポイントにアクセスすると、接続の検証状況に関する情報が表示されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:542
 msgid "This behavior can be disabled by setting the `quarkus.redis.health.enabled` property to `false` in your `application.properties`."
-msgstr ""
+msgstr "この動作は、 `application.properties` の `quarkus.redis.health.enabled` プロパティーを `false` に設定することで無効にできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/redis.adoc:543
@@ -1004,7 +1004,7 @@ msgstr "複数の Redis クライアント"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:547
 msgid "The Redis extension allows you to configure multiple clients.  Using several clients works the same way as having a single client."
-msgstr ""
+msgstr "Redis エクステンションを使用すると、複数のクライアントを設定することができます。複数のクライアントを使用しても、単一のクライアントを持つのと同じように動作します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:552
@@ -1017,18 +1017,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:557
 msgid "Notice there's an extra bit in the key (the `second` segment).  The syntax is as follows: `quarkus.redis.[optional name.][redis configuration property]`.  If the name is omitted, it configures the default client."
-msgstr ""
+msgstr "キー ( `second` セグメント) に余分なビットがあることに注意してください。構文は次の通りです: `quarkus.redis.[optional name.][redis configuration property]` .名前を省略した場合、デフォルトのクライアントを設定します。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/redis.adoc:558
 #, no-wrap
 msgid "Named Redis client Injection"
-msgstr ""
+msgstr "名前付きRedisクライアントのインジェクション"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:562
 msgid "When using multiple clients, you can select the client to inject using the `io.quarkus.redis.client.RedisClientName` qualifier.  Using the above properties to configure three different clients, you can also inject each one as follows:"
-msgstr ""
+msgstr "複数のクライアントを使用する場合は、 `io.quarkus.redis.client.RedisClientName` の修飾子を使用して注入するクライアントを選択することができます。上記のプロパティーを使って3つの異なるクライアントを設定すると、以下のようにそれぞれにインジェクションすることもできます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:567
