--- a/l10n/po/ja_JP/_versions/1.7/guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/cassandra.adoc.po
@@ -85,7 +85,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cassandra.adoc:34
 msgid "All the information between the browser and the server is formatted as JSON."
-msgstr ""
+msgstr "ブラウザとサーバー間の情報はすべてJSON形式になっています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cassandra.adoc:36
@@ -944,7 +944,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/cassandra.adoc:540
 #, no-wrap
 msgid "Connection Health Check"
-msgstr ""
+msgstr "接続のヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cassandra.adoc:544
