--- a/l10n/po/ja_JP/_versions/1.7/guides/index2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/index2.adoc.po
@@ -257,7 +257,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/index2.adoc:73
 #, no-wrap
 msgid "License"
-msgstr ""
+msgstr "ライセンス"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/index2.adoc:76
