--- a/l10n/po/ja_JP/_versions/1.7/guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/kogito.adoc.po
@@ -560,7 +560,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/kogito.adoc:242
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/kogito.adoc:246
