--- a/l10n/po/ja_JP/_versions/1.7/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/openapi-swaggerui.adoc.po
@@ -379,7 +379,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:202
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:484
 msgid "Now, we are ready to run our application:"
-msgstr ""
+msgstr "これで、アプリケーションを実行する準備が整いました。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:206
@@ -483,17 +483,17 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:275
 msgid "Version"
-msgstr ""
+msgstr "バージョン"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:276
 msgid "Contact Information"
-msgstr ""
+msgstr "連絡先情報"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:277
 msgid "License"
-msgstr ""
+msgstr "ライセンス"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:282
@@ -660,32 +660,32 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:400
 msgid "`META-INF/openapi.yaml`"
-msgstr ""
+msgstr "`META-INF/openapi.yaml`"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:401
 msgid "`META-INF/openapi.yml`"
-msgstr ""
+msgstr "`META-INF/openapi.yml`"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:402
 msgid "`META-INF/openapi.json`"
-msgstr ""
+msgstr "`META-INF/openapi.json`"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:403
 msgid "`WEB-INF/classes/META-INF/openapi.yml`"
-msgstr ""
+msgstr "`WEB-INF/classes/META-INF/openapi.yml`"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:404
 msgid "`WEB-INF/classes/META-INF/openapi.yaml`"
-msgstr ""
+msgstr "`WEB-INF/classes/META-INF/openapi.yaml`"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:405
 msgid "`WEB-INF/classes/META-INF/openapi.json`"
-msgstr ""
+msgstr "`WEB-INF/classes/META-INF/openapi.json`"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:407
@@ -746,7 +746,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:435
 #, no-wrap
 msgid "Property value"
-msgstr ""
+msgstr "プロパティ値"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:437
@@ -764,7 +764,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:440
 #, no-wrap
 msgid "Use the method name."
-msgstr ""
+msgstr "メソッド名を使用します。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:441
@@ -776,7 +776,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:443
 #, no-wrap
 msgid "Use the class name (without the package) plus the method."
-msgstr ""
+msgstr "(パッケージを含まない)クラス名とメソッドを使用します。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:444
@@ -788,7 +788,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:445
 #, no-wrap
 msgid "Use the class name plus the method name."
-msgstr ""
+msgstr "クラス名とメソッド名を使用します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:447
@@ -884,10 +884,10 @@ msgstr "設定リファレンス"
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:509
 #, no-wrap
 msgid "OpenAPI"
-msgstr ""
+msgstr "OpenAPI"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:513
 #, no-wrap
 msgid "Swagger UI"
-msgstr ""
+msgstr "Swagger UI"
