--- a/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect.adoc.po
@@ -508,7 +508,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect.adoc:251
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect.adoc:255
