--- a/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
@@ -28,12 +28,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:10
 msgid "MongoDB is a well known NoSQL Database that is widely used."
-msgstr ""
+msgstr "MongoDBは広く使われているNoSQLデータベースとして知られています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:12
 msgid "In this guide, we see how you can get your REST services to use the MongoDB database."
-msgstr ""
+msgstr "このガイドでは、RESTサービスでMongoDBデータベースを使用する方法を見ていきます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/mongodb.adoc:13
@@ -85,12 +85,12 @@ msgstr "このガイドで開発するアプリケーションは非常にシン
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:28
 msgid "All the information between the browser and the server is formatted as JSON."
-msgstr ""
+msgstr "ブラウザとサーバー間の情報はすべてJSON形式になっています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:30
 msgid "The elements are stored in MongoDB."
-msgstr ""
+msgstr "要素はMongoDBに格納されています。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/mongodb.adoc:31
@@ -110,7 +110,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:39
 msgid "The solution is located in the `mongodb-quickstart` {quickstarts-tree-url}/mongodb-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `mongodb-quickstart` {quickstarts-tree-url}/mongodb-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/mongodb.adoc:40
@@ -139,12 +139,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:57
 msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Jackson, Mutiny, Context Propagation and MongoDB Client extensions.  After this, the quarkus-mongodb-client extension has been added to your `pom.xml`."
-msgstr ""
+msgstr "このコマンドは、RESTEasy/JAX-RS、Jackson、Mutiny、Context Propagation、MongoDBクライアントエクステンションをインポートするMaven構造を生成します。この後、quarkus-mongodb-client エクステンションが `pom.xml` に追加されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:60
 msgid "If you already have your Quarkus project configured, you can add the `mongodb-client` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `mongodb-client` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mongodb.adoc:64
@@ -332,7 +332,7 @@ msgstr "派手なことは何もありません。注意すべき重要なこと
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:147
 msgid "Now create a `org.acme.mongodb.FruitService` that will be the business layer of our application and store/load the fruits from the mongoDB database."
-msgstr ""
+msgstr "今、私たちのアプリケーションのビジネス層となる `org.acme.mongodb.FruitService` を作成し、mongoDB データベースからフルーツを保存/ロードします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mongodb.adoc:156
@@ -423,7 +423,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:199
 msgid "Now, edit the `org.acme.mongodb.FruitResource` class as follows:"
-msgstr ""
+msgstr "ここで、 `org.acme.mongodb.FruitResource` クラスを以下のように編集します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mongodb.adoc:204
@@ -618,7 +618,7 @@ msgstr "フロントエンドの作成"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:306
 msgid "Now let's add a simple web page to interact with our `FruitResource`.  Quarkus automatically serves static resources located under the `META-INF/resources` directory.  In the `src/main/resources/META-INF/resources` directory, add a `fruits.html` file with the content from this {quickstarts-blob-url}/mongodb-quickstart/src/main/resources/META-INF/resources/fruits.html[fruits.html] file in it."
-msgstr ""
+msgstr "ここで、 `FruitResource` .Quarkusと対話するための簡単なウェブページを追加してみましょう。Quarkusは、 `META-INF/resources` ディレクトリーの下にある静的なリソースを自動的に提供します。 `src/main/resources/META-INF/resources` ディレクトリーに、この {quickstarts-blob-url}/mongodb-quickstart/src/main/resources/META-INF/resources/fruits.html[fruits.html]ファイルの内容を含む `fruits.html` ファイルを追加します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:308
@@ -644,12 +644,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/mongodb.adoc:314
 #, no-wrap
 msgid "Reactive MongoDB Client"
-msgstr ""
+msgstr "リアクティブな MongoDB クライアント"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:318
 msgid "A reactive MongoDB Client is included in Quarkus.  Using it is as easy as using the classic MongoDB Client.  You can rewrite the previous example to use it like the following."
-msgstr ""
+msgstr "リアクティブなMongoDBクライアントがQuarkusに含まれています。これを使うのは、古典的なMongoDBクライアントを使うのと同じくらい簡単です。先ほどの例を以下のように書き換えて使うことができます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/mongodb.adoc:320
@@ -660,7 +660,7 @@ msgstr "非推奨"
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/mongodb.adoc:324
 msgid "The `io.quarkus.mongodb.ReactiveMongoClient` client is deprecated and will be removed in the future.  It is recommended to switch to the `io.quarkus.mongodb.reactive.ReactiveMongoClient` client providing the `Mutiny` API."
-msgstr ""
+msgstr "`io.quarkus.mongodb.ReactiveMongoClient` クライアントは非推奨であり、将来的には削除される予定です。 `Mutiny` API を提供する `io.quarkus.mongodb.reactive.ReactiveMongoClient` クライアントに切り替えることをお勧めします。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/mongodb.adoc:327
@@ -671,7 +671,7 @@ msgstr "Mutiny"
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/mongodb.adoc:330
 msgid "The MongoDB reactive client uses Mutiny reactive types, if you're not familiar with them, read the link:getting-started-reactive#mutiny[Getting Started with Reactive guide] first."
-msgstr ""
+msgstr "MongoDB のリアクティブクライアントはMunityのリアクティブ型を使っています。 link:getting-started-reactive#mutiny[Reactive入門ガイド]を先にお読みください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mongodb.adoc:340
@@ -1103,7 +1103,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/mongodb.adoc:582
 #, no-wrap
 msgid "Connection Health Check"
-msgstr ""
+msgstr "接続のヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:586
@@ -1113,7 +1113,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:588
 msgid "So when you access the `/q/health/ready` endpoint of your application you will have information about the connection validation status."
-msgstr ""
+msgstr "そのため、アプリケーションの `/q/health/ready` エンドポイントにアクセスすると、接続の検証状況に関する情報が表示されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:590
