--- a/l10n/po/ja_JP/_versions/1.11/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-keycloak-authorization.adoc.po
@@ -475,7 +475,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:229
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:233
