--- a/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-multitenancy.adoc.po
@@ -538,7 +538,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:255
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:259
