--- a/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-web-authentication.adoc.po
@@ -469,7 +469,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:216
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:220
