--- a/l10n/po/ja_JP/_versions/1.7/guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/redis.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:11
 msgid "This guide demonstrates how your Quarkus application can connect to a Redis server using the Redis Client extension."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがRedisクライアントエクステンションを使用してRedisサーバーに接続する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/redis.adoc:14
@@ -64,7 +64,7 @@ msgstr "Apache Maven 3.5.3+"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:23
 msgid "A running Redis server, or Docker Compose to start one"
-msgstr ""
+msgstr "実行中のRedisサーバー、または1つ起動するためのDocker Compose"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:24
@@ -80,12 +80,12 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:29
 msgid "In this guide, we are going to expose a simple Rest API to increment numbers by using the https://redis.io/commands/incrby[`INCRBY`] command.  Along the way, we'll see how to use other Redis commands like `GET`, `SET`, `DEL` and `KEYS`."
-msgstr ""
+msgstr "このガイドでは、 link:https://redis.io/commands/incrby[`INCRBY`] コマンドを使用して、数値をインクリメントするシンプルな Rest API を公開します。また、 `GET` 、 `SET` 、 `DEL` 、 、 `KEYS` のような他の Redis コマンドの使い方も見ていきましょう。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:32
 msgid "We'll be using the Quarkus Redis Client extension to connect to our Redis Server. The extension is implemented on top of the https://vertx.io/docs/vertx-redis-client/java/[Vert.x Redis Client], providing an asynchronous and non-blocking way to connect to Redis."
-msgstr ""
+msgstr "今回は、Quarkus Redis Clientエクステンションを使用して、Redisサーバーに接続します。このエクステンションは link:https://vertx.io/docs/vertx-redis-client/java/[Vert.x Redis Client] の上に実装されており、非同期かつノンブロッキングでRedisに接続する方法を提供します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/redis.adoc:33
@@ -105,7 +105,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:41
 msgid "The solution is located in the `redis-quickstart` {quickstarts-tree-url}/redis-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `redis-quickstart` {quickstarts-tree-url}/redis-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/redis.adoc:42
@@ -132,12 +132,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:56
 msgid "This command generates a Maven project, importing the Redis extension."
-msgstr ""
+msgstr "このコマンドは、RedisエクステンションをインポートしてMavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:60
 msgid "If you already have your Quarkus project configured, you can add the `redis-client` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `redis-client` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:64
@@ -169,7 +169,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:80
 msgid "Then, we need to start a Redis instance (if you do not have one already) using the following command:"
-msgstr ""
+msgstr "次に、以下のコマンドを使用してRedisインスタンスを起動する必要があります(すでにインスタンスを持っていない場合)。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:84
@@ -186,7 +186,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:90
 msgid "Once we have the Redis server running, we need to configure the Redis connection properties.  This is done in the `application.properties` configuration file. Edit it to the following content:"
-msgstr ""
+msgstr "Redis サーバーを起動したら、Redis 接続のプロパティーを設定する必要があります。これは `application.properties` の設定ファイルで行います。以下の内容に編集してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:94
@@ -197,18 +197,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:97
 msgid "Configure Redis hosts to connect to. Here we connect to the Redis server we started in the previous section"
-msgstr ""
+msgstr "接続先のRedisホストを設定します。ここでは、前のセクションで開始したRedisサーバーに接続します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/redis.adoc:98
 #, no-wrap
 msgid "Creating the Increment POJO"
-msgstr ""
+msgstr "インクリメントPOJOの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:102
 msgid "We are going to model our increments using the `Increment` POJO.  Create the `src/main/java/org/acme/redis/Increment.java` file, with the following content:"
-msgstr ""
+msgstr "`Increment` POJO を使用してインクリメントをモデル化します。 `src/main/java/org/acme/redis/Increment.java` ファイルを作成し、以下の内容で作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:106
@@ -398,12 +398,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/redis.adoc:191
 #, no-wrap
 msgid "Creating the Increment Resource"
-msgstr ""
+msgstr "インクリメントリソースの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:194
 msgid "Create the `src/main/java/org/acme/redis/IncrementResource.java` file, with the following content:"
-msgstr ""
+msgstr "以下の内容の `src/main/java/org/acme/redis/IncrementResource.java` ファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:210
@@ -505,12 +505,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/redis.adoc:252
 #, no-wrap
 msgid "Modifying the test class"
-msgstr ""
+msgstr "テストクラスの変更"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:255
 msgid "Edit the `src/test/java/org/acme/redis/IncrementResourceTest.java` file to the following content:"
-msgstr ""
+msgstr "`src/test/java/org/acme/redis/IncrementResourceTest.java` ファイルを以下の内容に編集してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:261
@@ -737,7 +737,7 @@ msgstr "実行"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:396
 msgid "If you followed the instructions, you should have the Redis server running.  Then, you just need to run the application using:"
-msgstr ""
+msgstr "指示に従えば、Redisサーバーが起動しているはずです。あとは、アプリケーションを使って実行するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:400
@@ -748,13 +748,13 @@ msgstr "./mvnw quarkus:dev\n"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:403
 msgid "Open another terminal and run the `curl http://localhost:8080/increments` command."
-msgstr ""
+msgstr "別のターミナルを開いて `curl http://localhost:8080/increments` コマンドを実行します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/redis.adoc:404
 #, no-wrap
 msgid "Interacting with the application"
-msgstr ""
+msgstr "アプリケーションとの相互作用"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:409
@@ -765,7 +765,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/redis.adoc:410
 #, no-wrap
 msgid "Creating a new increment"
-msgstr ""
+msgstr "新しいインクリメントの作成"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:415
@@ -781,7 +781,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:420
 msgid "Running the above command should return the result below:"
-msgstr ""
+msgstr "上記のコマンドを実行すると、以下のような結果が返ってくるはずです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:427
@@ -798,12 +798,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/redis.adoc:429
 #, no-wrap
 msgid "See current increments keys"
-msgstr ""
+msgstr "現在のインクリメントキーの確認"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:432
 msgid "To see the list of current increments keys, run the following command:"
-msgstr ""
+msgstr "現在のインクリメントキーのリストを表示するには、以下のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:436
@@ -814,18 +814,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:439
 msgid "The above command should return `[\"first\"]` indicating that we have only one increment thus far."
-msgstr ""
+msgstr "上記のコマンドは `[\"first\"]` を返し、これまでのところインクリメントが 1 つしかないことを示しているはずです。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/redis.adoc:440
 #, no-wrap
 msgid "Retrieve a new increment"
-msgstr ""
+msgstr "新しいインクリメントの取得"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:443
 msgid "To retrieve an increment using its key, we will have to run the below command:"
-msgstr ""
+msgstr "キーを使ってインクリメントを取得するには、以下のコマンドを実行する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:447
@@ -836,7 +836,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:450
 msgid "Running this command, should return the following result:"
-msgstr ""
+msgstr "このコマンドを実行すると、以下のような結果が返ってくるはずです。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/redis.adoc:459
@@ -847,7 +847,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:462
 msgid "To increment a value, run the following command:"
-msgstr ""
+msgstr "値をインクリメントするには、以下のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:466
@@ -858,12 +858,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:469
 msgid "Increment the `first` value by 27."
-msgstr ""
+msgstr "`first` の値を 27 増やします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:471
 msgid "Now, running the command `curl http://localhost:8080/increments/first` should return the following result:"
-msgstr ""
+msgstr "さて、コマンドを実行すると `curl http://localhost:8080/increments/first` は次のような結果を返します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:478
@@ -884,12 +884,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/redis.adoc:482
 #, no-wrap
 msgid "Deleting a key"
-msgstr ""
+msgstr "キーの削除"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:485
 msgid "Use the command below, to delete an increment given its key."
-msgstr ""
+msgstr "インクリメントのキーを指定して削除するには、以下のコマンドを使用します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:489
@@ -900,7 +900,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:492
 msgid "Delete the `first` increment."
-msgstr ""
+msgstr "`first` のインクリメントを削除します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:494
@@ -921,7 +921,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:500
 msgid "First, we will need to package it:"
-msgstr ""
+msgstr "まず、パッケージ化します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:504
@@ -937,7 +937,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:509
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:513
@@ -970,7 +970,7 @@ msgstr "./mvnw package -Pnative\n"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:532
 msgid "Once the build is finished, you can run the executable with:"
-msgstr ""
+msgstr "ビルドが完了したら、実行ファイルを次のように実行することが出来ます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/redis.adoc:536
@@ -982,12 +982,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/redis.adoc:538
 #, no-wrap
 msgid "Connection Health Check"
-msgstr ""
+msgstr "接続のヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:542
 msgid "If you are using the `quarkus-smallrye-health` extension, `quarkus-vertx-redis` will automatically add a readiness health check to validate the connection to the Redis server."
-msgstr ""
+msgstr "`quarkus-smallrye-health` エクステンションを使用している場合、 `quarkus-vertx-redis` は、Redis サーバーへの接続を検証するためのreadiness ヘルスチェックを自動的に追加します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:544
@@ -997,7 +997,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/redis.adoc:546
 msgid "This behavior can be disabled by setting the `quarkus.redis.health.enabled` property to `false` in your `application.properties`."
-msgstr ""
+msgstr "この動作は、 `application.properties` の `quarkus.redis.health.enabled` プロパティーを `false` に設定することで無効にできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/redis.adoc:547
