--- a/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect-web-authentication.adoc.po
@@ -297,7 +297,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:135
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:139
