--- a/l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: Monitoring Quarkus apps using Micrometer and Prometheus into OpenShift \n"
@@ -34,51 +34,67 @@ msgid ""
 "author: jcarvaja\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: MicrometerとPrometheusを使ったQuarkusアプリのOpenShiftへのモニタリング\n"
+"date: 2021-03-15\n"
+"tags: extension\n"
+"synopsis: MicrometerとPrometheusを使ってQuarkus AppsのメトリクスをOpenShiftに公開\n"
+"author: jcarvaja\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:11
+#, fuzzy
 msgid "Metrics are the measurements of any aspect of an application such as resource usage or behaviors. We can expose these metrics from our Quarkus applications by using the https://quarkus.io/guides/micrometer[Micrometer] extension via the `/q/metrics` endpoint."
-msgstr ""
+msgstr "メトリクスは、リソースの使用状況や動作など、アプリケーションのあらゆる側面の測定値です。Quarkusのアプリケーションからこれらのメトリクスを公開するには、 `/q/metrics` エンドポイント経由で link:https://quarkus.io/guides/micrometer[Micrometer]エクステンションを使用します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:13
+#, fuzzy
 msgid "What metrics will be exposed? Only by adding the Micrometer extension, a lot of metrics are exposed by default for example metrics about the JVM engine like the number of current live threads `jvm_threads_live_threads` or metrics about the system itself like the current CPU usage `system_cpu_usage`. Additionally, more metrics will automatically be exposed depending on other Quarkus extensions we might be using. For example, if we are using a Quarkus REST extension such as Resteasy, it will automatically expose metrics about your running services:"
-msgstr ""
+msgstr "どのようなメトリクスが公開されますか?Micrometerエクステンションを追加するだけで、多くのメトリクスがデフォルトで公開されます。例えば、現在のライブスレッド数のようなJVMエンジンに関するメトリクス `jvm_threads_live_threads` や、現在のCPU使用率のようなシステム自体に関するメトリクス `system_cpu_usage` などがあります。さらに、使用している他のQuarkus拡張機能に応じて、より多くのメトリクスが自動的に公開されます。例えば、ResteasyのようなQuarkusのRESTエクステンションを使用している場合、実行中のサービスに関するメトリクスが自動的に公開されます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:18
+#, fuzzy
 msgid "``` http_server_requests_seconds_count{method=\"GET\",outcome=\"SUCCESS\",status=\"200\",uri=\"/hello\",} 1.0 http_server_requests_seconds_sum{method=\"GET\",outcome=\"SUCCESS\",status=\"200\",uri=\"/hello\",} 0.018198043 ```"
-msgstr ""
+msgstr "<pre class=\"highlight\"> ``</pre>"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:20
+#, fuzzy
 msgid "The same will happen if we're using the Kafka extension. All this configuration is well documented in https://quarkus.io/guides/micrometer[the Quarkus Micrometer guide]."
-msgstr ""
+msgstr "Kafkaエクステンションを使用している場合も同様です。これらの設定については、 link:https://quarkus.io/guides/micrometer[Quarkus Micrometerのガイド]によく書かれています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:22
+#, fuzzy
 msgid "__How are these metrics consumed?__ As said, Micrometer exposes the metrics on the `/q/metrics` endpoint in order to be consumed by third parties like https://prometheus.io/[Prometheus]. OpenShift provides an embedded Prometheus instance that we can use. So, let's see what we need to do to integrate our Quarkus Applications metrics and the Prometheus embedded instance provided in OpenShift."
-msgstr ""
+msgstr "_これらのメトリクスはどのように消費されるのですか？_前述の通り、Micrometer は link:https://prometheus.io/[Prometheus] のようなサードパーティが利用できるように `/q/metrics` エンドポイントでメトリクスを公開しています。OpenShiftにはPrometheusのインスタンスが埋め込まれているので、それを利用することができます。それでは、Quarkus Applicationsのメトリクスと、OpenShiftで提供されているPrometheusの埋め込みインスタンスを統合するために必要なことを見ていきましょう。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:24
+#, fuzzy
 msgid "Basically, we need to complete the next following steps:"
-msgstr ""
+msgstr "基本的には、次のようなステップを踏む必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:26
+#, fuzzy
 msgid "Enable Monitoring for user-defined projects in OpenShift"
-msgstr ""
+msgstr "OpenShiftでユーザー定義のプロジェクトのモニタリングを有効にする"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:27
+#, fuzzy
 msgid "Deploy our Quarkus application"
-msgstr ""
+msgstr "Quarkusアプリケーションのデプロイ"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:28
+#, fuzzy
 msgid "Create a Service monitor in our project"
-msgstr ""
+msgstr "プロジェクトにサービスモニタを作成"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:29
@@ -88,34 +104,39 @@ msgstr "要件"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:32
+#, fuzzy
 msgid "https://docs.openshift.com/container-platform/4.7/cli_reference/openshift_cli/getting-started-cli.html[Openshift CLI]"
-msgstr ""
+msgstr "link:https://docs.openshift.com/container-platform/4.7/cli_reference/openshift_cli/getting-started-cli.html[OpenshiftのCLI]"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:33
+#, fuzzy
 msgid "An Openshift instance"
-msgstr ""
+msgstr "Openshiftインスタンス"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:34
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Step 1 - Enable Monitoring for user-defined projects in OpenShift"
-msgstr ""
+msgstr "ステップ1 - OpenShiftでユーザー定義のプロジェクトのモニタリングを有効にする"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:37
+#, fuzzy
 msgid "In order to enable the Monitoring for user-defined projects, we need to follow the instructions https://docs.openshift.com/container-platform/4.7/monitoring/enabling-monitoring-for-user-defined-projects.html[from OpenShift documentation]."
-msgstr ""
+msgstr "ユーザー定義のプロジェクトのモニタリングを有効にするためには、 link:https://docs.openshift.com/container-platform/4.7/monitoring/enabling-monitoring-for-user-defined-projects.html[OpenShiftのドキュメントの]指示に従う必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:39
+#, fuzzy
 msgid "In essence, we need to create a ConfigMap in the namespace `openshift-monitoring`."
-msgstr ""
+msgstr "基本的には、名前空間 `openshift-monitoring` に ConfigMap を作成する必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:41
+#, fuzzy
 msgid "`cluster-monitoring-config.yaml`:"
-msgstr ""
+msgstr "`cluster-monitoring-config.yaml` 。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:51
@@ -134,8 +155,9 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:54
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:193
+#, fuzzy
 msgid "And apply it:"
-msgstr ""
+msgstr "そして、それを応用する。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:58
@@ -145,8 +167,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:61
+#, fuzzy
 msgid "For 4.5 or previous versions of OpenShift, you need to use instead:"
-msgstr ""
+msgstr "OpenShiftの4.5以前のバージョンでは、代わりに"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:73
@@ -165,19 +188,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:76
+#, fuzzy
 msgid "Openshift will automatically create the `openshift-user-workload-monitoring` namespace and deploy the required resources for Prometheus to it."
-msgstr ""
+msgstr "Openshiftは自動的に `openshift-user-workload-monitoring` 名前空間を作成し、そこにPrometheusに必要なリソースをデプロイします。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "2. Deploy our Quarkus application"
-msgstr ""
+msgstr "<li> <p>Quarkusアプリケーションのデプロイ</p> </li>"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:80
+#, fuzzy
 msgid "After the required infrastructure in OpenShift is ready, then let's continue with the Quarkus application. We'll implement a REST API and enable micrometer with prometheus which requires the addition of two Quarkus extensions to our `pom.xml` file:"
-msgstr ""
+msgstr "OpenShiftで必要なインフラの準備ができたら、次にQuarkusアプリケーションを進めていきましょう。REST APIを実装し、prometheusでmicrometerを有効にします。そのためには、 `pom.xml` ファイルに2つのQuarkusエクステンションを追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:91
@@ -195,8 +220,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:94
+#, fuzzy
 msgid "And we'll add the Greeting resource:"
-msgstr ""
+msgstr "そして、Greetingリソースを追加します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:101
@@ -253,13 +279,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:122
+#, fuzzy
 msgid "As we can see, we use the micrometer registry facade to create a counter with a tag by name that will be incremented every time it's invoked."
-msgstr ""
+msgstr "ご覧のように、micrometer レジストリファサードを使用して、タグ名を持つカウンタを作成し、起動するたびにインクリメントしています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:124
+#, fuzzy
 msgid "Let's try this application by running it:"
-msgstr ""
+msgstr "このアプリケーションを実行して試してみましょう。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:128
@@ -269,8 +297,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:131
+#, fuzzy
 msgid "Now, we should be able to call our service:"
-msgstr ""
+msgstr "これで、私たちのサービスを呼び出すことができるはずです。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:135
@@ -280,8 +309,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:138
+#, fuzzy
 msgid "And it should return `Hello!`. So good so far, we can also see the metrics in `http://localhost:8080/q/metrics` where should see our `greeting_counter` counter:"
-msgstr ""
+msgstr "そして、 `Hello!` を返すはずです。ここまではいいとして、次のようにメトリクスを見ることもできます。 `&lt;a href=\"http://localhost:8080/q/metrics\" class=\"bare\"&gt;http://localhost:8080/q/metrics&lt;/a&gt;`ここでは、 `greeting_counter` のカウンターを見ることができます。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:144
@@ -294,8 +324,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:147
+#, fuzzy
 msgid "Next, we need to deploy our Quarkus application into OpenShift. For ease this step, Quarkus provides a super useful extension called `quarkus-openshift`, let's add it into our `pom.xml` file:"
-msgstr ""
+msgstr "次に、QuarkusアプリケーションをOpenShiftにデプロイする必要があります。このステップを簡単にするために、Quarkusは `quarkus-openshift` という非常に便利な拡張機能を提供していますので、これを `pom.xml` ファイルに追加しましょう。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:154
@@ -309,8 +340,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:157
+#, fuzzy
 msgid "So, let's deploy our application into a newly created project `my-project` in OpenShift:"
-msgstr ""
+msgstr "それでは、OpenShiftで新たに作成したプロジェクト `my-project` 、アプリケーションをデプロイしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:162
@@ -322,29 +354,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:165
+#, fuzzy
 msgid "The label `app-with-metrics` will be used in a later step to select the applications to monitor by OpenShift."
-msgstr ""
+msgstr "ラベル `app-with-metrics` は、後のステップで OpenShift が監視するアプリケーションを選択するために使用されます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:166
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "3. Create a Service monitor in our project"
-msgstr ""
+msgstr "<li> <p>プロジェクトにサービスモニタを作成</p> </li>"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:169
+#, fuzzy
 msgid "Before moving forward, let's explain first how Prometheus works. Prometheus uses a pull model to get metrics from applications. This means that Prometheus will scrape or watch endpoints to pull metrics from."
-msgstr ""
+msgstr "先に進む前に、まずPrometheusの仕組みを説明しよう。Prometheus は、アプリケーションからメトリクスを取得するためにプル・モデルを使用します。つまり、Prometheus はメトリクスを取得するためにエンドポイントをスクレイピングしたり、ウォッチしたりします。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:171
+#, fuzzy
 msgid "From the previous step, our service is now running in OpenShift, but we didn't configure anything in Prometheus to scrape our service yet. This is done by the Service Monitor resource:"
-msgstr ""
+msgstr "前のステップから、サービスは OpenShift で実行されていますが、Prometheus でサービスをスクレイプするための設定はまだ何もしていません。これは Service Monitor リソースで行います。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:173
+#, fuzzy
 msgid "`service-monitor.yaml`:"
-msgstr ""
+msgstr "`service-monitor.yaml` 。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:190
@@ -375,19 +411,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:200
+#, fuzzy
 msgid "What we have just done is to create a Service Monitor named `prometheus-app-monitor` that will select apps with the label `app-with-metrics: quarkus-app` that was added in the previous step. Then, OpenShift will call the endpoint `/q/metrics` for all the services labeled with `app-with-metrics: quarkus-app` every 30 seconds."
-msgstr ""
+msgstr "今行ったのは、前のステップで追加した `app-with-metrics: quarkus-app` というラベルのついたアプリを選択する `prometheus-app-monitor` という名前の Service Monitor を作成することです。すると、OpenShiftは30秒ごとに、 `app-with-metrics: quarkus-app` というラベルのついたサービスすべてについて、エンドポイント `/q/metrics` を呼び出します。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:201
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Finally, let's start using it!"
-msgstr ""
+msgstr "いよいよ、使ってみましょう。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:204
+#, fuzzy
 msgid "First, we need to call our greetings service: `http://quarkus-micrometer-my-project.ocp.host/hello/quarkus`. This will increment the `greeting_counter_total` counter. But where can we see the metrics? Let's browse to OpenShift Console in the `Developer > Monitoring` view, select `Metrics`, then `Custom Query` and type `greeting_counter_total{name = \"quarkus\"}`, we should see now:"
-msgstr ""
+msgstr "まず、グリーティングサービスを呼び出す必要があります。 `&lt;a href=\"http://quarkus-micrometer-my-project.ocp.host/hello/quarkus\" class=\"bare\"&gt;http://quarkus-micrometer-my-project.ocp.host/hello/quarkus&lt;/a&gt;`.これで `greeting_counter_total` カウンターが増加します。しかし、このメトリクスはどこで見ることができるでしょうか？OpenShift Console を `Developer &amp;gt; Monitoring` ビューでブラウズし、 `Metrics` を選択し、次に `Custom Query` を選択し、 `greeting_counter_total{name = \"quarkus\"}` と入力してみましょう。これで確認できます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:205
@@ -397,5 +435,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:207
+#, fuzzy
 msgid "Great! We are now exposing our Quarkus Application metrics in OpenShift!"
-msgstr ""
+msgstr "素晴らしい!OpenShiftでQuarkus Applicationのメトリクスを公開しています。"
