Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-core.adoc.po
@@ -997,7 +997,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-core.adoc:535
 #, no-wrap
 msgid "`io.quarkus`"
-msgstr ""
+msgstr "`io.quarkus`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-core.adoc:540
@@ -1015,7 +1015,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-core.adoc:544
 #, no-wrap
 msgid "`quarkus-universe-bom`"
-msgstr ""
+msgstr "`quarkus-universe-bom`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-core.adoc:549
