--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-core.adoc.po
@@ -1189,7 +1189,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-core.adoc:641
 #, no-wrap
 msgid "`io.quarkus`"
-msgstr ""
+msgstr "`io.quarkus`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-core.adoc:646
@@ -1207,7 +1207,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-core.adoc:650
 #, no-wrap
 msgid "`quarkus-universe-bom`"
-msgstr ""
+msgstr "`quarkus-universe-bom`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-core.adoc:655
