--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-core.adoc.po
@@ -1075,7 +1075,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-core.adoc:570
 #, no-wrap
 msgid "`io.quarkus`"
-msgstr ""
+msgstr "`io.quarkus`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-core.adoc:575
@@ -1093,7 +1093,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-core.adoc:579
 #, no-wrap
 msgid "`quarkus-universe-bom`"
-msgstr ""
+msgstr "`quarkus-universe-bom`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-core.adoc:584
