Update override stats

--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -5,7 +5,7 @@ l10n/override/ja_JP/_includes/support-help-band.html, 2021-02-24 14:03:29 +0000,
 l10n/override/ja_JP/_includes/homepage-imperative_and_reactive-band.html, 2021-02-06 14:23:31 +0000, 2019-11-05 22:20:38 +0000, OK
 l10n/override/ja_JP/_includes/homepage-video-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
 l10n/override/ja_JP/_includes/header-navigation.html, 2021-02-06 14:23:31 +0000, 2020-07-01 09:32:46 +0000, OK
-l10n/override/ja_JP/_includes/homepage-hero-band.html, 2021-02-06 14:23:31 +0000, 2021-01-20 12:15:38 +0000, OK
+l10n/override/ja_JP/_includes/homepage-hero-band.html, 2021-02-06 14:23:31 +0000, 2021-03-15 20:40:15 +0000, NG
 l10n/override/ja_JP/_includes/homepage-extensions-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
 l10n/override/ja_JP/_includes/support-options-band.html, 2021-02-06 14:23:31 +0000, 2020-05-22 09:21:09 +0000, OK
 l10n/override/ja_JP/_includes/homepage-developer_joy-band.html, 2021-02-06 14:23:31 +0000, 2020-10-07 18:07:22 +0000, OK
